# line_trace_dqn

./: .gitignore  .rosinstall  CMakeLists.txt  README.md  package.xml  requirements.in  requirements.txt.bak  setup.py
gazebo/models/turtlebot3_linetrace/course/: course.material
gazebo/worlds/: course.world  turtlebot3_linetrace.world
launch/: course.launch  result_graph.launch  test_rospy.launch  turtlebot3_dqn_train.launch  turtlebot3_linetrace.launch
log/: .gitignore
log/example-2022-08-01-08-56/: checkpoint_100.pth  checkpoint_1000.pth  checkpoint_200.pth  checkpoint_300.pth  checkpoint_400.pth  checkpoint_500.pth  checkpoint_600.pth  checkpoint_700.pth  checkpoint_800.pth  checkpoint_900.pth  hyperparams.json  score_steps.txt
scripts/: dqn_train.py  log_plotter.py  requirements.txt  result_graph.py
scripts/test_rospy/: follower.py  forward_stop.py  wanderbot.py
src/line_trace_dqn/: dqn_agent.py  env.py  q_net.py
